--- a/dealer/composer.json
+++ b/dealer/composer.json
@@ -17,7 +17,8 @@
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "maatwebsite/excel": "~2.1.0"
     },
     "autoload": {
         "classmap": [
