--- a/dealer/composer.json
+++ b/dealer/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "2.*",
         "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
@@ -17,8 +18,7 @@
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0",
-        "zizaco/entrust": "5.2.x-dev",
-        "maatwebsite/excel": "~2.1.0"
+        "zizaco/entrust": "5.2.x-dev"
     },
     "autoload": {
         "classmap": [
