--- a/dealer/composer.json
+++ b/dealer/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "2.*",
+        "simplesoftwareio/simple-qrcode": "^2.0",
         "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
